# teste_outsera

./: .env  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  extensions.py  routes.py
app/controllers/: movies.py
app/health/: controller.py
app/models/: movies.py
app/movie/: controller.py  model.py  repository.py  service.py
app/schemas/: movies.py
app/services/: movies.py
documents/: movielist.csv
tests/: test_movies.py
